WIP: ajustados imports para funcionarem globalmente

--- a/css/app.css
+++ b/css/app.css
@@ -201,3 +201,9 @@ input[type="submit"] {
   font-weight: bolder;
   text-transform: uppercase;
 }
+
+/*navigation*/
+
+.float-menu {
+  position: absolute;
+}
