--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: black;
   color: white;
@@ -23,4 +27,103 @@ body {
   width: 100dvw;
   height: 100vh;
   height: 100dvh;
+}
+
+.phone {
+  --color2: #065b59;
+  --color1: #28b5b5;
+  --color3: #41ab34;
+
+  --c11: #065b59;
+  --c12: #044e4c;
+  --c13: #034140;
+  --c14: #023534;
+  --c15: #012928;
+  --c16: #011e1d;
+  --c17: #001313;
+  --c18: #000909;
+  --c19: #000303;
+  --c20: #000000;
+
+  --c21: #28b5b5;
+  --c22: #4cbdbc;
+  --c23: #65c4c4;
+  --c24: #7ccccb;
+  --c25: #90d3d2;
+  --c26: #a4dada;
+  --c27: #b7e2e1;
+  --c28: #c9e9e8;
+  --c29: #dbf0f0;
+  --c30: #edf8f7;
+
+  --c31: #41ab34;
+  --c32: #58b44d;
+  --c33: #6dbd63;
+  --c34: #80c577;
+  --c35: #93ce8b;
+  --c36: #a5d69e;
+  --c37: #b7dfb2;
+  --c38: #c9e7c5;
+  --c39: #dbefd8;
+  --c40: #edf7ec;
+
+  --c41: #c7417b;
+  /* --c42:; */
+  /* --c43:; */
+  /* --c44:; */
+  /* --c45:; */
+  /* --c46:; */
+  /* --c47:; */
+  /* --c48:; */
+  /* --c49:; */
+  /* --c50:; */
+
+  --bg: var(--c29);
+  --fg: var(--c40);
+  --nav-bg: var(--c16);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: min(450px);
+  aspect-ratio: min(1/2);
+  outline: 1px solid var(--c11);
+  overflow: scroll;
+  background: var(--bg);
+  border-radius: 10px;
+  scrollbar-width: 0;
+}
+
+.app-content {
+  /* background-color: blue; */
+  height: 100%;
+  color: black;
+  position: relative;
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 1.5rem;
+  padding-inline: 10px;
+  border-radius: 0px 0px 999px 999px;
+  width: fit-content;
+  place-self: center;
+  display: grid;
+  place-items: center;
+  background: black;
+  z-index: 1;
+}
+
+.error-page {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
