--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,6 @@
 :root {
   margin: 0;
   padding: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background: black;
-  color: white;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  height: 100dvh;
-  overflow-x: hidden;
-}
-
-.all-center {
-  display: grid;
-  place-items: center;
-}
-
-.screen {
-  width: 100vw;
-  width: 100dvw;
-  height: 100vh;
-  height: 100dvh;
-}
-
-.phone {
   --color2: #065b59;
   --color1: #28b5b5;
   --color3: #41ab34;
@@ -81,49 +52,45 @@ body {
   --bg: var(--c29);
   --fg: var(--c40);
   --nav-bg: var(--c16);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  background: black;
+  overflow: hidden;
+  width: 100vw;
+  width: 100dvw;
+  height: calc(100vh - 20px);
+  height: calc(100dvh - 20px);
+}
+
+body {
+  margin-inline: 0px;
+  margin-inline: auto;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
   position: relative;
   display: flex;
   flex-direction: column;
   width: min(450px);
-  aspect-ratio: min(1/2);
+  aspect-ratio: 1/2;
   outline: 1px solid var(--c11);
-  overflow: scroll;
+  overflow: hidden;
   background: var(--bg);
   border-radius: 10px;
-  scrollbar-width: 0;
-}
-
-.app-content {
-  /* background-color: blue; */
-  height: 100%;
-  color: black;
-  position: relative;
-}
-
-.navbar {
-  position: sticky;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  height: 1.5rem;
-  padding-inline: 10px;
-  border-radius: 0px 0px 999px 999px;
-  width: fit-content;
-  place-self: center;
-  display: grid;
-  place-items: center;
-  background: black;
-  z-index: 1;
 }
 
 .error-page {
-  position: absolute;
+  background: #1a1ada;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 1rem;
-  top: 0;
-  width: 100%;
   height: 100%;
 }
